[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/spawner/Enemies_spawner.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.7845, 0.719601 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1950, 1100 )

[node name="Enemies_spawner" type="Area2D"]
collision_layer = 129
collision_mask = 0
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Spawn_blocker" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Game_timer" type="Timer" parent="."]
autostart = true

[node name="Spawn_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn_area"]
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Game_timer" to="." method="_on_Game_timer_timeout"]
